boton tablet/mobile

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description"
         content="En las coordeanas ideales para disfrutar de la placidez y el esparcimiento, situadas en el espetacular marco del valle de Tafi, Cabañas Moxy es la opcion ideal para vos!.">
     <meta name="keywords" content="VIAJES, VACACIONES, CABAÑAS, RELAX, MOTANAÑAS, PAISAJE, CERROS">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +18,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="enlacesEscritorio">
         <div class="barraNavegacion">
             <a href="#">
                 <img src="./Iconos/logo_2.png" alt="logo Moxy">
@@ -34,7 +36,34 @@
         </nav>
     </header>
 
-    <hr>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"> <img src="./Iconos/logo_2.png" alt="logo moxy"></a>
+          <h1>Moxy</h1>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/habitaciones.html">Habitaciones</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/actividades.html">Actividades</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/tarifas.html">Tarifas</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
     <main>
         <section>
@@ -174,7 +203,7 @@
             </article>
         </section>
     </main>
-    <hr>
+
     <footer class="footer">
         <div class="footer__info">
             <h4>Informacion de contacto</h4>
@@ -198,6 +227,11 @@
             <p>Copyright © 2023 Moxy</p>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
