--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +16,7 @@
 
 <body>
     <div id="gridContanto">
-        <header>
+        <header class="enlacesEscritorio">
             <div class="barraNavegacion">
                 <a href="#">
                     <img src="../Iconos/logo_2.png" alt="Logo Moxy">
@@ -31,6 +33,36 @@
                 </ul>
             </nav>
         </header>
+
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"> <img src="../Iconos/logo_2.png" alt="logo moxy">Moxy</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./habitaciones.html">Habitaciones</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./actividades.html">Actividades</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./tarifas.html">Tarifas</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
         <div class="mainContact">
             <section id="seccion1">
@@ -69,7 +101,7 @@
                     </form>
                 </fieldset>
             </section>
-    
+
             <section id="seccion2">
                 <div class="llegar">
                     <iframe
@@ -79,94 +111,31 @@
                     <div class="estamos">
                         <h3>¿Donde estamos?</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi minus provident expedita ea error
-                            commodi, incidunt nam eaque rem ipsum obcaecati labore architecto, non tenetur deserunt
-                            praesentium?
-                            Obcaecati, eum incidunt.
-                            Distinctio ipsa, tempore officiis temporibus maxime dolore. Corrupti magnam assumenda nobis
-                            officiis
-                            distinctio soluta natus perspiciatis delectus dolorum numquam doloribus iure, veniam, ratione
-                            odio
-                            praesentium provident. Enim placeat optio voluptas.
-                            Doloremque, voluptatem necessitatibus, error illum culpa dicta, iusto officia unde rem
-                            praesentium
-                            totam minima vel at officiis sequi numquam. Ut officiis molestias magnam facere a? Quas eveniet
-                            nisi
-                            perferendis nulla!
-                            Adipisci esse inventore repellat deserunt. Veritatis porro minima ducimus voluptate numquam, est
-                            vero accusantium excepturi ab consequatur odio quos tempore harum neque omnis blanditiis!
-                            Distinctio
-                            minima odit ducimus rerum culpa?
-                            Explicabo fuga, sint tenetur quam eum fugit provident rem qui eaque ullam facere laboriosam
-                            ducimus.
-                            Expedita beatae omnis eligendi eos excepturi voluptate sint aperiam maxime, laudantium,
-                            voluptatum
-                            natus accusamus iste.
-                            Quaerat quibusdam vero eum ex deserunt dignissimos nihil rem ullam incidunt, tempora
-                            accusantium!
-                            Quam omnis deserunt minus commodi odit laborum? Ut velit quibusdam nobis impedit amet?
-                            Doloremque
-                            rerum modi exercitationem.
-                            Quos, dolores blanditiis. Cupiditate, aspernatur repellendus? Voluptas excepturi repudiandae
-                            voluptatem ad, doloribus culpa at cupiditate molestias nesciunt, odio dignissimos cumque
-                            praesentium
-                            quaerat libero quasi eum nisi cum quo sequi. Blanditiis?
-                            Alias vero non eos minus veniam ipsa corrupti libero impedit est quas beatae cupiditate quos at
-                            amet, natus voluptatibus exercitationem facilis officiis facere ratione nihil illum! Dolores
-                            unde
-                            dolore quos?
-                            Quidem magni amet alias corrupti rerum omnis temporibus quibusdam consequatur nemo itaque
-                            voluptate
-                            quam voluptatem corporis dolorum esse vero magnam, doloribus reiciendis consectetur autem vel
-                            officiis iste? Sed, praesentium aliquid.
-                            Velit repellat, maiores veritatis incidunt soluta vitae voluptate perspiciatis nulla doloribus
-                            quae
-                            quos tenetur maxime numquam pariatur necessitatibus vel ipsum blanditiis harum iusto cupiditate
-                            aut!
-                            Quas, ipsa. Nemo, illum eveniet.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero soluta corrupti odit
+                            exercitationem voluptas inventore minima, impedit facilis culpa consectetur, aliquid ut!
+                            Illum, esse nobis quo accusantium totam officiis tenetur!
+                            Unde delectus repellat sapiente ducimus aut pariatur laudantium! Facilis debitis, maxime
+                            similique dolorum quam architecto velit suscipit voluptas consequuntur eos optio quo autem
+                            delectus mollitia nihil dolores officiis! Cupiditate, dolorum.
+                            Enim ex id quos quam sequi! Dolorum eos, sunt veritatis rerum quisquam repellat ullam
+                            expedita eaque quam consequuntur, et pariatur quidem accusamus odio quas odit! Architecto
+                            possimus quisquam laudantium illum.
                         </p>
                         <div id="comoLlegar">
                             <h3>Como llegar</h3>
-                        <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse repellendus, repudiandae
-                            cupiditate
-                            aliquam eum voluptatibus quas magni eos similique molestiae excepturi impedit incidunt nihil
-                            veritatis vitae tempora necessitatibus voluptate iusto.
-                            A ad vel quae recusandae obcaecati repellat facere autem, minus sed. Fugit eligendi nemo neque
-                            porro
-                            earum. Nobis maiores ex dolorum consectetur minus reprehenderit ipsa magni, aliquid rerum quas
-                            ducimus.
-                            Rem eius tenetur earum, ut laudantium labore obcaecati commodi sunt autem inventore vitae rerum
-                            blanditiis? Eius esse porro totam sequi, beatae voluptatum eveniet optio nemo! Quisquam
-                            cupiditate
-                            deleniti nihil expedita?
-                            Facilis natus doloribus eum saepe est eos odit porro eaque tempore reiciendis officiis deleniti,
-                            animi repellendus, corporis numquam ex laboriosam sapiente aperiam culpa! Est, quod libero?
-                            Molestiae ipsum molestias inventore.
-                            Error iure consectetur delectus nisi possimus illo cum corporis. Error quis dolor consequuntur
-                            reprehenderit? Deleniti ipsam doloremque odit magni nostrum repellat deserunt, sit natus? Rerum
-                            voluptatibus magnam explicabo ipsum repudiandae.
-                            Debitis illo ad, facilis nostrum incidunt natus officiis similique dolore impedit nobis nam aut
-                            cupiditate sunt inventore eum reprehenderit ullam? Ipsa, consequatur nisi sequi nobis cum
-                            commodi
-                            impedit est minima.
-                            Ipsa voluptates amet atque soluta doloremque quas facere molestiae illo, sunt quaerat. Magnam
-                            soluta
-                            atque deserunt aliquid aperiam nam quas labore, necessitatibus voluptate ea. Animi quo
-                            dignissimos
-                            libero sed non?
-                            Nisi, facilis nemo minus blanditiis molestiae vitae voluptate quia sit saepe provident
-                            temporibus
-                            eaque debitis atque? Et dolorum dignissimos in mollitia similique aliquam nulla assumenda.
-                            Nostrum
-                            dolorem tempora eligendi est.
-                        </p>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab iste tenetur suscipit
+                                voluptatibus maxime, ratione, magni dignissimos cumque repudiandae nemo error,
+                                blanditiis eligendi velit ex non eos illum. Placeat, ad!
+                                Iure pariatur corporis labore accusantium, facilis quidem, architecto ex expedita ea
+                                mollitia sequi laboriosam aliquam sapiente, illum omnis nobis dicta molestias. Dicta
+                                temporibus cupiditate non. Modi alias facere molestias veritatis.
+                            </p>
                         </div>
                     </div>
                 </div>
             </section>
         </div>
-
         <aside>
             <div class="asideContacto">
                 <img class="asideImage" src="../Img/aside1.jpg" alt="">
@@ -207,6 +176,11 @@
             </div>
         </footer>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
