--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +15,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="enlacesEscritorio">
         <div class="barraNavegacion">
             <a href="#">
                 <img src="../Iconos/logo_2.png" alt="Logo Moxy">
@@ -30,6 +32,35 @@
             </ul>
         </nav>
     </header>
+
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"> <img src="../Iconos/logo_2.png" alt="logo moxy">Moxy</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./habitaciones.html">Habitaciones</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Actividades</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./tarifas.html">Tarifas</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <main>
 
@@ -50,7 +81,8 @@
                     </li>
                     <li><a target="_blank" href="https://www.facebook.com"><img src="../Iconos/Facebook.png" alt=""></a>
                     </li>
-                    <li> <a target="_blank" href="https://twitter.com/"><img src="../Iconos/Twitter.png" alt=""></a></li>
+                    <li> <a target="_blank" href="https://twitter.com/"><img src="../Iconos/Twitter.png" alt=""></a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -59,7 +91,9 @@
         </div>
     </footer>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
 </body>
 
