--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -35,7 +35,8 @@
 
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"> <img src="../Iconos/logo_2.png" alt="logo moxy">Moxy</a>
+            <a class="navbar-brand" href="#"> <img src="../Iconos/logo_2.png" alt="logo moxy"></a>
+            <h1>Moxy</h1>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
